# GreedyCraft2-FissionReactorOptimizer

./: CMakeLists.txt  LICENSE  NuclearCraft_FissionReactor_SourceData.xlsx  README.md
src/: Data.cpp  Data.h  FuelPlacementPrefilter.cpp  FuelPlacementPrefilter.h  FuelSpecialCases.h  Grid.cpp  Grid.h  MainWindow.cpp  MainWindow.h  NeutronRules.h  Optimizer.cpp  Optimizer.h  OptimizerCommon.cpp  OptimizerCooling.cpp  OptimizerDetail.h  OptimizerIrradiator.cpp  OptimizerMerge.cpp  OptimizerSingle.cpp  Output.cpp  Output.h  Perf.cpp  Perf.h  ReactorGridWidget.cpp  ReactorGridWidget.h  Rule.cpp  Rule.h  Simulator.cpp  Simulator.h  StateVector.h  main.cpp
